--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -117,7 +117,7 @@ const { title } = Astro.props;
     </style>
 
     <script>
-      document.getElementById('nav-toggle')!.addEventListener('change', (e) => {
+      document.getElementById('nav-toggle')!.addEventListener('change', () => {
         document.querySelector('.nav-menu')!.classList.toggle('hidden');
         document.querySelector('.nav-menu')!.classList.toggle('flex');
       });
